heading alignment fixed

--- a/tdc-api/src/main/resources/META-INF/resources/tdc.css
+++ b/tdc-api/src/main/resources/META-INF/resources/tdc.css
@@ -64,5 +64,5 @@ h2 {
 }
 
 section {
-    padding: 3rem !important;
+    padding: 3rem;
 }
